[gd_scene load_steps=12 format=2]

[ext_resource path="res://res/bending/bending_indicator.png" type="Texture" id=1]
[ext_resource path="res://src/bending/JumpTechnique.gd" type="Script" id=2]
[ext_resource path="res://src/bending/BendingController.gd" type="Script" id=3]
[ext_resource path="res://src/bending/BazookaTechnique.gd" type="Script" id=4]
[ext_resource path="res://src/bending/ShieldTechnique.gd" type="Script" id=5]
[ext_resource path="res://src/bending/BendingTechnique.gd" type="Script" id=6]
[ext_resource path="res://src/bending/SwordTechnique.gd" type="Script" id=7]
[ext_resource path="res://src/bending/FistsTechnique.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[sub_resource type="CircleShape2D" id=2]
radius = 48.4795

[sub_resource type="CircleShape2D" id=3]
radius = 20.3512

[node name="BendingController" type="Node2D"]
script = ExtResource( 3 )

[node name="Indicator" type="Node2D" parent="."]
position = Vector2( 406.233, 184.908 )

[node name="Sprite" type="Sprite" parent="Indicator"]
texture = ExtResource( 1 )
hframes = 5
vframes = 5
frame = 1

[node name="Tween" type="Tween" parent="Indicator"]

[node name="Area2D" type="Area2D" parent="Indicator"]
collision_layer = 0
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Indicator/Area2D"]
shape = SubResource( 1 )

[node name="FocusModeArea2D" type="Area2D" parent="Indicator"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Indicator/FocusModeArea2D"]
shape = SubResource( 2 )

[node name="JumpTechnique" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Attractors" type="Node2D" parent="JumpTechnique"]
visible = false

[node name="Attractor" type="Area2D" parent="JumpTechnique/Attractors"]
modulate = Color( 0.568627, 0.717647, 1, 1 )
position = Vector2( 14.275, 15.8722 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpTechnique/Attractors/Attractor"]
shape = SubResource( 3 )

[node name="Attractor2" type="Area2D" parent="JumpTechnique/Attractors"]
modulate = Color( 0.568627, 0.717647, 1, 1 )
position = Vector2( 18.9997, 15.8722 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpTechnique/Attractors/Attractor2"]
shape = SubResource( 3 )

[node name="Attractor3" type="Area2D" parent="JumpTechnique/Attractors"]
modulate = Color( 0.568627, 0.717647, 1, 1 )
position = Vector2( 24.9843, 15.5572 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpTechnique/Attractors/Attractor3"]
shape = SubResource( 3 )

[node name="Attractor4" type="Area2D" parent="JumpTechnique/Attractors"]
modulate = Color( 0.568627, 0.717647, 1, 1 )
position = Vector2( 30.9689, 15.8722 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpTechnique/Attractors/Attractor4"]
shape = SubResource( 3 )

[node name="Attractor5" type="Area2D" parent="JumpTechnique/Attractors"]
modulate = Color( 0.568627, 0.717647, 1, 1 )
position = Vector2( 37.5835, 16.1872 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpTechnique/Attractors/Attractor5"]
shape = SubResource( 3 )

[node name="Attractors2" type="Node2D" parent="JumpTechnique"]
visible = false

[node name="Attractor" type="Area2D" parent="JumpTechnique/Attractors2"]
modulate = Color( 0.568627, 0.717647, 1, 1 )
position = Vector2( 14.275, 15.8722 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpTechnique/Attractors2/Attractor"]
shape = SubResource( 3 )

[node name="Attractor2" type="Area2D" parent="JumpTechnique/Attractors2"]
modulate = Color( 0.568627, 0.717647, 1, 1 )
position = Vector2( 18.9997, 15.8722 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpTechnique/Attractors2/Attractor2"]
shape = SubResource( 3 )

[node name="Attractor3" type="Area2D" parent="JumpTechnique/Attractors2"]
modulate = Color( 0.568627, 0.717647, 1, 1 )
position = Vector2( 24.9843, 15.5572 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpTechnique/Attractors2/Attractor3"]
shape = SubResource( 3 )

[node name="Attractor4" type="Area2D" parent="JumpTechnique/Attractors2"]
modulate = Color( 0.568627, 0.717647, 1, 1 )
position = Vector2( 30.9689, 15.8722 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpTechnique/Attractors2/Attractor4"]
shape = SubResource( 3 )

[node name="Attractor5" type="Area2D" parent="JumpTechnique/Attractors2"]
modulate = Color( 0.568627, 0.717647, 1, 1 )
position = Vector2( 37.5835, 16.1872 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpTechnique/Attractors2/Attractor5"]
shape = SubResource( 3 )

[node name="BazookaTechnique" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Bullets" type="Node2D" parent="BazookaTechnique"]

[node name="ShieldTechnique" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="FocusTimer" type="Timer" parent="ShieldTechnique"]
wait_time = 0.06
autostart = true

[node name="BendingTechnique" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="SwordTechnique" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="FocusTimer" type="Timer" parent="SwordTechnique"]
wait_time = 0.02
autostart = true

[node name="JiggleTimer" type="Timer" parent="SwordTechnique"]
wait_time = 0.12
autostart = true

[node name="OverheatTimer" type="Timer" parent="SwordTechnique"]
wait_time = 2.5
one_shot = true

[node name="FistsTechnique" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="FocusTimer" type="Timer" parent="FistsTechnique"]
wait_time = 0.02
autostart = true

[node name="JiggleTimer" type="Timer" parent="FistsTechnique"]
wait_time = 0.12
autostart = true

[node name="OverheatTimer" type="Timer" parent="FistsTechnique"]
wait_time = 2.5
one_shot = true

[node name="LoadingTween" type="Tween" parent="FistsTechnique"]

[node name="LiquidMasterTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true
